apps/metatags/kservice.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: metatags
  labels: &labels
    app.kubernetes.io/part-of: metatags
    app.kubernetes.io/name: metatags
    app.kubernetes.io/instance: metatags
    networking.knative.dev/visibility: cluster-local
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "0"
        autoscaling.knative.dev/maxScale: "1"
        autoscaling.knative.dev/window: "60s"
      labels: *labels
    spec:
      containers:
      - image: ghcr.io/alexandreroman/metatags
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1001
          seccompProfile:
            type: RuntimeDefault
