apps/metatags/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metatags
  labels:
    app: metatags
spec:
  type: ClusterIP
  ports:
  - port: 81
    protocol: TCP
    targetPort: 8080
  selector:
    app: metatags
