apps/metatags/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metatags
spec:
  rules:
  - host: meta.aro.fyi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metatags
            port:
              number: 80
